🍲🏦 Checkpoint ./index.html:45105987/1625 ./style.css:45105987/91

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background-image: url(bg.jpg);
+background-image: url(https://cdn.glitch.global/fb205773-9bd9-41e6-97d4-e2b4c3f811da/bg.jpg?v=1670863662829);
 cursor: none;
 }
 a, span, button {
