--- a/style.css
+++ b/style.css
@@ -352,12 +352,15 @@ color: #7cb1ff;
 }
 
 @media all and (max-width: 500px) {
+  .btnContact {
+    margin-right: 0;
+  }
   .about {
     margin-top: 30px;
-    margin-left: 130px;
+    margin-left: 200px;
   }
   .circle {
-    left: 250px
+    left: 290px
   }
   .head {
     flex-direction: column;
