--- a/style.css
+++ b/style.css
@@ -341,8 +341,12 @@ margin-top: -10px;
 }
 .about-title {
 display: flex;
+flex-direction: column;
 align-items: center;
-justify-content: center;
+margin-top: 10px;
+}
+.par-footer {
+font-family: 'Poppins', sans-serif;
 margin-top: 30px;
 }
 .down {
