--- a/style.css
+++ b/style.css
@@ -341,9 +341,9 @@ margin-top: -10px;
 }
 .about-title {
 display: flex;
-flex-direction: column;
 align-items: center;
-margin-top: 10px;
+justify-content: center;
+margin-top: 30px;
 }
 .par-footer {
 font-family: 'Poppins', sans-serif;
