--- a/style.css
+++ b/style.css
@@ -345,6 +345,12 @@ align-items: center;
 justify-content: center;
 margin-top: 30px;
 }
+.about-title-footer {
+display: flex;
+flex-direction: column;
+align-items: center;
+margin-top: 10px;
+}
 .par-footer {
 font-family: 'Poppins', sans-serif;
 margin-top: 30px;
