--- a/style.css
+++ b/style.css
@@ -345,6 +345,17 @@ align-items: center;
 justify-content: center;
 margin-top: 10px;
 }
+.about-title-footer {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+.par-footer {
+font-family: 'Poppins', sans-serif;
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
 .down {
 display: flex;
 justify-content: center;
